# CPPProjects

./: .gitignore  CMakeLists.txt  Cat.cpp  Cat.h  Machine.cpp  Machine.h  NS.h  Pointers.cpp  Pointers.h  cpp-fundamentals.sln  debugtest  functions.cpp  functions.h  main.cpp  make_debug.sh  make_release.sh  run.sh
cobra/: Makefile  cobra.vcxproj  cobra.vcxproj.filters  imgui.ini
cobra/include/: CobraEVENTS.h  Game_Metadata.h  IGame.h  Logger.h  Sdl_API.h  asset_manager.h  cobra_events.h  game.h  game_entity.h
cobra/include/components/: Audio_Manager.h  collider2d.h  dynamic_text.h  grid.h  texture_component.h
cobra/src/: Audio_Manager.cpp  Game_Metadata.cpp  Logger.cpp  Sdl_API.cpp  asset_manager.cpp  event_handlers.cpp  game_entity.cpp  main.cpp
cobra/src/components/: collider2d.cpp  dynamic_text.cpp  grid.cpp  texture_component.cpp
cobra/src/entitites/: snake_entity.cpp  snake_entity.h  (+2 more)
cpp-fundamentals/: Makefile  cpp-fundamentals.vcxproj  cpp-fundamentals.vcxproj.filters
cpp-fundamentals/src/: Cat.cpp  Cat.h  Log.cpp  Machine.cpp  Machine.h  NS.cpp  NS.h  Pointers.cpp  Pointers.h  data.txt  functions.h  main.cpp  miostream.cpp  miostream.h  static.cpp
particle/: main.cpp  main.h  particle.cpp  particle.h  particle_orchestrator.cpp  particle_orchestrator.h  window.cpp  window.h
src/: Log.cpp  Machine.cpp  NS.cpp  Pointers.cpp  functions.h  main.cpp  static.cpp
src/agame/: Game.cpp  Game.hpp  game_object.hpp  main.cpp  main.h  texture_handler.cpp  texture_handler.hpp
src/particle/: main.cpp  particle.cpp  particle_orchestrator.cpp  particle_orchestrator.h  window.cpp  window.h
src/sdlAPI/: Collider2D.cpp  Collider2D.h  Game.cpp  Game.hpp  Game_Entity.cpp  Game_Entity.h  ISound.cpp  ISound.h  TextComponent.cpp  TextComponent.hpp  Textured_Rectangle.cpp  Textured_Rectangle.h  animated_sprite.cpp  animated_sprite.h  game_object.hpp  main.cpp  main.h  resource_manager.cpp  resource_manager.h  texture_handler.cpp  texture_handler.hpp
(+48 files in other folders)
